--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -1,36 +1,27 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "fe5c857f-68c0-4e32-9e0e-21b26195d7d1",
-   "metadata": {},
-   "source": [
-    "# Import lib"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "88b6f4ae-7257-4919-ad73-082de9f62348",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importing necessary libraries for data manipulation, image processing, and visualization.\n",
-    "import pandas as pd  # Data manipulation and analysis\n",
-    "import numpy as np  # Numerical operations\n",
+    "import pandas as pd  \n",
+    "import numpy as np  \n",
     "\n",
-    "from PIL import Image  # Image processing using Python Imaging Library (PIL)\n",
-    "import cv2  # Computer vision tasks and image processing with OpenCV\n",
-    "import glob  # File pattern matching for filenames\n",
+    "from PIL import Image  \n",
+    "import cv2  \n",
+    "import glob  \n",
     "\n",
-    "import matplotlib.pyplot as plt  # Plotting and visualization\n",
-    "from matplotlib.ticker import (MultipleLocator, AutoMinorLocator)  # Tick formatting and control in plots\n",
-    "from matplotlib.colors import LightSource  # Light source shading for 3D plots\n",
-    "from matplotlib import cbook, cm  # Utilities for data handling and color mapping\n",
-    "from matplotlib.ticker import PercentFormatter  # Format ticks as percentages\n",
+    "import matplotlib.pyplot as plt  \n",
+    "from matplotlib.ticker import (MultipleLocator, AutoMinorLocator)  \n",
+    "from matplotlib.colors import LightSource  \n",
+    "from matplotlib import cbook, cm  \n",
+    "from matplotlib.ticker import PercentFormatter  \n",
     "\n",
-    "import threading  # For multithreading tasks\n",
-    "from multiprocessing import Process  # For parallel processing using multiple processes\n"
+    "import threading  \n",
+    "from multiprocessing import Process  \n"
    ]
   },
   {
@@ -329,9 +320,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e62967e9-ace9-45ac-9e86-a27304254e5c",
    "metadata": {},
+   "outputs": [],
    "source": [
     "img_array = []\n",
     "for filename in glob.glob('*.png'):\n",
